fix: enable dev auto connect when env set

--- a/.env.example
+++ b/.env.example
@@ -23,11 +23,11 @@
 # OPENID_CLIENT_SECRET=your-oauth-app-client-secret
 # OPENID_CALLBACK_URL=http://localhost:3000/api/auth/callback
 
-# GitHub OAuth2 Configuration (optional - enables private repository access)
-# Create OAuth App at: https://github.com/settings/applications/new
-# GITHUB_CLIENT_ID=your-github-oauth-app-client-id
-# GITHUB_CLIENT_SECRET=your-github-oauth-app-client-secret
-# GITHUB_CALLBACK_URL=http://localhost:3000/api/auth/github/callback
+# DEV CONFIG
+# When running locally its faster to specify some token values directly
+# instead of entering them via the UI. When added they should be automatically 
+# applied to the UI.
 
-# Note: API keys (OPENAI_API_KEY, HUGGINGFACE_TOKEN) are NOT set here
-# Users provide these credentials through the web UI at runtime or OAuth2 flow
+NODE_ENV=development
+GH_TOKEN=github_pat_...
+OPENAI_API_KEY=sk-...
